# taiyi

./: .dockerignore  .env.ci  .gitignore  .gitmodules  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  foundry.toml  helder.json  update-container.sh
.cargo/: config.toml
.github/: dependabot.yml
artifacts/: LubanChallengeManager.json  LubanCore.json  LubanEscrow.json
contracts/: .gitignore  .gitmodules  README.md  foundry.toml  package.json  remappings.txt  tsconfig.json
crates/beacon-client/: Cargo.toml
crates/beacon-client/src/: bls.rs  client.rs  jwt.rs  lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: keysource.rs  lib.rs  utils.rs
crates/cli/src/commands/: batch_delegate.rs  batch_register.rs  delegate.rs  deposit.rs  deregister.rs  deregister_validator_avs.rs  get_delegated_preconfer.rs  get_strategies_stakes.rs  get_validator.rs  get_validators_for_operators.rs  luban_escrow_deposit.rs  luban_stake.rs  mod.rs  offchain_delegate.rs  operator_info.rs  preconfer.rs  register.rs  register_for_operator_sets.rs  register_gateway_avs.rs  register_preconfer.rs  register_underwriter_avs.rs  register_validator_avs.rs  register_validators.rs  taiyi_escrow_deposit.rs  taiyi_stake.rs  underwriter.rs
crates/cli/src/keys_management/: dirk.rs  keystore.rs  mod.rs  signing.rs
crates/cli/src/keys_management/pb/: v1.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  dirk.rs  keystore.rs  signing.rs  utils.rs
crates/common/src/commit/: client.rs
crates/common/src/config/: mux.rs
crates/common/src/pbs/: api.rs  event.rs  mod.rs  service.rs  state.rs
crates/common/src/pbs/mev_boost/: get_header.rs  register_validator.rs  status.rs  submit_block.rs
crates/common/src/pbs/routes/: get_header.rs  register_validator.rs  reload.rs  status.rs  submit_block.rs
crates/common/src/pbs/types/: beacon_block.rs  blinded_block_body.rs  blobs_bundle.rs  execution_payload.rs  execution_requests.rs  get_header.rs  mod.rs  utils.rs
crates/common/src/signer/: loader.rs  store.rs
crates/common/src/signer/schemes/: bls.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: bls.rs  ebls.rs  lib.rs
crates/crypto/src/precompile/: blst_utils.rs  constant.rs  error.rs  g1add.rs  g1msm.rs  g2add.rs  g2msm.rs  map_fp2_to_g2.rs  map_fp_to_g1.rs  mod.rs  paring.rs  utils.rs
crates/poi/: Cargo.toml
crates/poi/src/: main.rs
crates/preconfer/: Cargo.toml
crates/preconfer/artifacts/: LubanChallengeManager.json  LubanCore.json  LubanEscrow.json  LubanProposerRegistry.json
crates/preconfer/src/: base_fee_fetcher.rs  blocknative.rs  chain_info_exex.rs  chainspec_builder.rs  commit_boost_client.rs  constraint_client.rs  constraint_submit.rs  context_ext.rs  contract.rs  error.rs  lib.rs  lookahead_fetcher.rs  network_state.rs  preconf_request_map.rs  preconfer.rs  pricer.rs  rpc.rs  rpc_state.rs  signer_client.rs  storage_slots.rs  tests.rs  validation.rs  validator.rs
crates/preconfer/src/clients/: execution_client.rs  mod.rs  pricer.rs  relay_client.rs  signer_client.rs
crates/preconfer/src/db/: mod.rs  reth_db_utils.rs
crates/preconfer/src/metrics/: mod.rs  models.rs  preconfer.rs
crates/preconfer/src/orderpool/: clean_priortised_orderpool.rs  mod.rs  orderpool.rs  priortised_order_store.rs  priortised_orderpool.rs  update_onchain_nonces.rs
crates/preconfer/src/preconf_api/: api.rs  jsonrpc.rs  mod.rs  state.rs
crates/preconfer/src/preconf_pool/: inclusion.rs  inner.rs  mod.rs  orderpool.rs  parked.rs  pending.rs  prioritized_orderpool.rs  ready.rs  tests.rs
crates/preconfer/src/reth_db_utils/: db_provider.rs  mod.rs  noncer.rs  state.rs
crates/preconfer/src/reth_utils/: db_provider.rs  mod.rs  state.rs
crates/preconfer/src/simulator/: mod.rs  reth_db_utils.rs  sim_worker.rs  simulate.rs  state_cache.rs
crates/preconfer/src/validator/: constant.rs  mod.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: available_slot.rs  bls.rs  cancel_preconf.rs  check_preconf_response.rs  commitment.rs  constraints.rs  encode_util.rs  estimate_fee.rs  inclusion_request.rs  lib.rs  log_util.rs  preconf_fee.rs  preconf_hash.rs  preconf_request.rs  preconf_request_type_a.rs  preconf_request_type_b.rs  preconf_response.rs  preconf_tx.rs  preconf_tx_request.rs  proposer_info.rs  slot_info.rs  tx_ext.rs
crates/underwriter/: Cargo.toml
crates/underwriter/src/: account_info.rs  account_state.rs  api.rs  block_info.rs  bls_signer.rs  broadcast_sender.rs  constraint_submit.rs  constraints_stream.rs  context_ext.rs  contract.rs  error.rs  event_stream.rs  lib.rs  lookahead_fetcher.rs  main.rs  network_state.rs  preconf_fee_provider.rs  preconf_signer.rs  sequence_number.rs  slot_model.rs  tests.rs  tx_cache.rs  underwriter.rs
crates/underwriter/src/clients/: execution_client.rs  pricer.rs  relay_client.rs  signer_client.rs
crates/underwriter/src/metrics/: middleware.rs  models.rs  provider.rs
crates/underwriter/src/preconf_api/: api.rs  mod.rs  state.rs
crates/underwriter/src/preconf_pool/: inner.rs  mod.rs  pending.rs  ready.rs  sequence_number.rs  tests.rs  validator.rs
crates/underwriter/tests/: test_gas_used.rs  test_pricer.rs  test_relay_client.rs  tests.rs
crates/zkvm-types/: Cargo.toml
crates/zkvm-types/src/: types.rs  utils.rs
e2e-tests/: Cargo.toml  build.rs
e2e-tests/src/: constant.rs  contract_call.rs  lib.rs  taiyi_process.rs  test_fraud_proof.rs  test_preconf_workflow.rs  tests.rs  utils.rs
e2e-tests/test-data/: poi-preconf-type-a-included-test-data.json  poi-preconf-type-a-multiple-txs-included-test-data.json  poi-preconf-type-b-included-test-data.json
e2e-tests/testdata/: preconf_type_a.json  preconf_type_b.json
examples/: Cargo.toml  README.md
examples/run_taiyi/: config.toml  start.sh
examples/src/: submit-preconf-request.rs
examples/type_a/: Cargo.toml
examples/type_a/src/: main.rs
examples/type_b/: Cargo.toml
examples/type_b/src/: main.rs
helder-preconf-spammer/: Cargo.toml
helder-preconf-spammer/src/: main.rs
spammer/: Cargo.toml
spammer/src/: http.rs  main.rs
(+295 files in other folders)
