# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "bin/taiyi",
    "bin/taiyi-boost",
    "bin/taiyi-challenger",
    "bin/taiyi-cli",
    "bin/taiyi-fraud-proof-cli",
    "bin/taiyi-underwriter-monitor",
    "crates/cli",
    "crates/contracts",
    "crates/crypto",
    "crates/poi",
    "crates/poni",
    "crates/primitives",
    "crates/underwriter",
    "crates/zkvm-verifier",
    "e2e-tests",
    "examples/type_a",
    "examples/type_b",
    "spammer",
]
default-members = [
    "bin/taiyi",
    "bin/taiyi-boost",
    "bin/taiyi-cli",
    "bin/taiyi-challenger",
    "bin/taiyi-fraud-proof-cli",
    "bin/taiyi-underwriter-monitor",
    "crates/cli",
    "crates/underwriter",
    "crates/primitives",
    "crates/contracts",
]
resolver = "2"
[workspace.package]
version = "0.1.8"
edition = "2021"

[workspace.metadata.cargo-machete]
ignored = [
    "alloy-contract",
    "tiny-bip39",
    "derive_more",
    "tree_hash",
    "ssz_rs",
    "alloy-rpc-client",
    "ethereum_ssz",
    "ethereum_ssz_derive",
    "log",
]

[workspace.dependencies]
taiyi-beacon-client = { path = "crates/beacon-client" }
taiyi-cmd = { path = "crates/cli" }
taiyi-common = { path = "crates/common" }
taiyi-contracts = { path = "crates/contracts" }
taiyi-crypto = { path = "crates/crypto" }
taiyi-integration-tests = { path = "tests" }
taiyi-poi = { path = "crates/poi" }
taiyi-poni = { path = "crates/poni" }
taiyi-primitives = { path = "crates/primitives" }
taiyi-underwriter = { path = "crates/underwriter" }
taiyi-zkvm-types = { path = "crates/zkvm-types" }

axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "92f3ec39d8c595790ed4717b8996a314165f013f" }
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client.git", rev = "f776bca71db413ab0a0d83488cbcdbe96a5216c8" }
cb-pbs = { git = "https://github.com/Commit-Boost/commit-boost-client.git", rev = "f776bca71db413ab0a0d83488cbcdbe96a5216c8" }
commit-boost = { git = "https://github.com/Commit-Boost/commit-boost-client.git", rev = "f776bca71db413ab0a0d83488cbcdbe96a5216c8" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "92f3ec39d8c595790ed4717b8996a314165f013f" }

# alloy
alloy-consensus = { version = "0.12", features = ["k256", "serde"] }
alloy-contract = { version = "0.12" }
alloy-eips = { version = "0.12", default-features = false }
alloy-network = { version = "0.12", default-features = false }
alloy-node-bindings = { version = "0.12", default-features = false }
alloy-primitives = { version = "0.8.15", features = [
    "serde",
], default-features = false }
alloy-provider = { version = "0.12", features = [
    "reqwest",
    "ws",
], default-features = false }
alloy-rlp = "0.3.10"
alloy-rpc-client = { version = "0.12", default-features = false }
alloy-rpc-types = { version = "0.12", features = [
    "eth",
], default-features = false }
alloy-rpc-types-beacon = { version = "0.8.0", default-features = false }
alloy-rpc-types-engine = { version = "0.12", default-features = false }
alloy-rpc-types-eth = { version = "0.12", default-features = false }
alloy-rpc-types-trace = { version = "0.12", default-features = false }
alloy-signer = { version = "0.12", default-features = false }
alloy-signer-local = { version = "0.12", features = ["mnemonic"] }
alloy-sol-types = "0.8.15"
alloy-transport = { version = "0.12" }
alloy-transport-http = { version = "0.12", default-features = false }
alloy-trie = "0.7.9"

# eth
eth-trie-proofs = "0.1.2"
eth_trie = "0.5.0"

# sp1
sp1-build = "=4.1.7"
sp1-sdk = "=4.1.7"
sp1-verifier = "=4.1.7"
sp1-zkvm = "=4.1.7"

ahash = "0.8.11"
async-trait = "0.1.83"
blst = "0.3.12"
clap = { version = "4.5.23", features = ["derive", "env"] }
derive_more = "1.0.0"
ethereum_ssz = "0.7"
ethereum_ssz_derive = "0.7"
eyre = { version = "0.6.12" }
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hex-literal = "1.0.0"
http-body-util = "0.1.2"
k256 = "0.13.4"
lazy_static = "1.5.0"
lru = "0.12.5"
parking_lot = "0.12.3"
priority-queue = "2.1.1"
prometheus = "0.13.4"
prost = "0.13.4"
reqwest = "0.12.9"
rustls = "0.23.20"
scc = "2.2.6"
secp256k1 = { version = "0.30.0", features = ["global-context"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
redb = "2.4.0"
bincode = "2.0.1"
sqlx = { default-features = true, version = "*", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "bigdecimal",
    "migrate"
] }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "ec3073e2273b4d0873fcb6df68ff4eff79588e92" }
ssz_types = "0.10"
thiserror = "2.0.12"
time = { version = "0.3.37", features = ["macros", "formatting", "parsing"] }
tiny-bip39 = "2.0.0"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree_hash = "0.9.1"
tree_hash_derive = "0.9.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
zeroize = "1.8.1"

[patch.crates-io]
# SHA2
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
# SHA3
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
# BigInt
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
# Keccak
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
# ECDSA
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-4.0.0" }
