# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
#    "bin/taiyi",
#    "bin/taiyi-boost",
#    "bin/taiyi-cli",
#    "bin/taiyi-fraud-proof-cli",
#    "bin/taiyi-underwriter-monitor",
    "crates/cli",
    "crates/contracts",
    "crates/bls",
    "crates/eth2_keystore",
    "crates/poi",
    "crates/poni",
    "crates/primitives",
    "crates/zkvm-verifier",
#    "e2e-tests",
#    "examples/type_a",
#    "examples/type_b",
#    "spammer",
]
default-members = [
#    "bin/taiyi",
#    "bin/taiyi-boost",
#    "bin/taiyi-cli",
#    "bin/taiyi-fraud-proof-cli",
#    "bin/taiyi-underwriter-monitor",
#    "crates/cli",
    "crates/primitives",
    "crates/contracts",
]
resolver = "2"
[workspace.package]
version = "0.1.8"
edition = "2021"

[workspace.metadata.cargo-machete]
ignored = [
    "alloy-contract",
    "tiny-bip39",
    "tree_hash",
    "ssz_rs",
    "alloy-rpc-client",
    "ethereum_ssz",
    "ethereum_ssz_derive",
    "log",
]

[workspace.dependencies]
taiyi-beacon-client = { path = "crates/beacon-client" }
taiyi-cmd = { path = "crates/cli" }
taiyi-common = { path = "crates/common" }
taiyi-contracts = { path = "crates/contracts" }
taiyi-crypto = { path = "crates/crypto" }
taiyi-integration-tests = { path = "tests" }
taiyi-poi = { path = "crates/poi" }
taiyi-poni = { path = "crates/poni" }
taiyi-primitives = { path = "crates/primitives" }
taiyi-zkvm-types = { path = "crates/zkvm-types" }
bls = { path = "crates/bls" }
eth2_keystore = { path = "crates/eth2_keystore" }

axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }

# alloy
alloy-consensus = { version = "1", features = ["k256", "serde"] }
alloy-contract = { version = "1" }
alloy-eips = { version = "1", default-features = false }
alloy-network = { version = "1", default-features = false }
alloy-node-bindings = { version = "1", default-features = false }
alloy-primitives = { version = "1", features = [
    "serde",
], default-features = false }
alloy-provider = { version = "1", features = [
    "reqwest",
    "ws",
], default-features = false }
alloy-rlp = "0.3.10"
alloy-rpc-client = { version = "1", default-features = false }
alloy-rpc-types = { version = "1", features = [
    "eth",
], default-features = false }
alloy-rpc-types-beacon = { version = "1", default-features = false }
alloy-rpc-types-engine = { version = "1", default-features = false }
alloy-rpc-types-eth = { version = "1", default-features = false }
alloy-rpc-types-trace = { version = "1", default-features = false }
alloy-signer = { version = "1", default-features = false }
alloy-signer-local = { version = "1", features = ["mnemonic"] }
alloy-sol-types = "1"
alloy-transport = { version = "1" }
alloy-transport-http = { version = "1", default-features = false }
alloy-trie = "0.8"
# sp1
sp1-build = "4.1.7"
sp1-sdk = "4.1.7"
sp1-verifier = "4.1.7"
sp1-zkvm = "4.1.7"

ahash = "0.8.11"
arbitrary = { version = "1", features = ["derive"] }
async-trait = "0.1.83"
blst = "0.3.12"
clap = { version = "4.5.23", features = ["derive", "env"] }
ethereum_ssz = "0.7"
ethereum_ssz_derive = "0.7"
eth_trie = "0.6.0"
eyre = { version = "0.6.12" }
ethereum_hashing = "0.7.0"
ethereum_serde_utils = "0.7"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hex-literal = "1.0.0"
http-body-util = "0.1.2"
k256 = "0.13.4"
lazy_static = "1.5.0"
lru = "0.12.5"
parking_lot = "0.12.3"
priority-queue = "2.1.1"
prometheus = "0.13.4"
prost = "0.13.4"
rand = "0.8"
reqwest = "0.12.9"
rustls = "0.23.20"
scc = "2.2.6"
secp256k1 = { version = "0.30.0", features = ["global-context"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_repr = "0.1.20"
sha2 = "0.9"
sqlx = { default-features = true, version = "*", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "bigdecimal",
    "migrate"
] }
ssz_rs = "0.9.0"
ssz_types = "0.10"
thiserror = "2.0.12"
time = { version = "0.3.37", features = ["macros", "formatting", "parsing"] }
tiny-bip39 = "2.0.0"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree_hash = "0.10"
tree_hash_derive = "0.10"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
zeroize = "1.8.1"