# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
default-members = [
    "bin/taiyi",
    "bin/taiyi-boost",
    "bin/taiyi-cli",
    "bin/taiyi-fraud-proof-cli",
    "bin/taiyi-underwriter-monitor",
    "crates/cli",
    "crates/primitives",
    "crates/contracts",
]
members = [
    "bin/taiyi",
    "bin/taiyi-boost",
    "bin/taiyi-cli",
    "bin/taiyi-fraud-proof-cli",
    "bin/taiyi-underwriter-monitor",
    "crates/beacon-client",
    "crates/cli",
    "crates/cb-common",
    "crates/contracts",
    "crates/bls",
    "crates/eth2_keystore",
    "crates/poi",
    "crates/poni",
    "crates/primitives",
    "crates/underwriter",
    "crates/zkvm-verifier",
    "e2e-tests",
    #    "examples/type_a",
    #    "examples/type_b",
    #    "spammer",
]
resolver = "2"
[workspace.package]
edition = "2021"
version = "0.1.8"

[workspace.metadata.cargo-machete]
ignored = [
    "alloy-contract",
    "tiny-bip39",
    "tree_hash",
    "ssz_rs",
    "alloy-rpc-client",
    "ethereum_ssz",
    "ethereum_ssz_derive",
    "log",
    "ethereum_serde_utils",
]

[workspace.dependencies]
bls = { path = "crates/bls" }
cb-common = { path = "crates/cb-common" }
eth2_keystore = { path = "crates/eth2_keystore" }
taiyi-beacon-client = { path = "crates/beacon-client" }
taiyi-cmd = { path = "crates/cli" }
taiyi-contracts = { path = "crates/contracts" }
taiyi-crypto = { path = "crates/crypto" }
taiyi-poi = { path = "crates/poi" }
taiyi-poni = { path = "crates/poni" }
taiyi-primitives = { path = "crates/primitives" }
taiyi-underwriter = { path = "crates/underwriter" }
taiyi-zkvm-types = { path = "crates/zkvm-types" }

axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }

alloy = { version = "1.0.23", features = [
    "full", 
    "essentials", 
    "consensus",
    "contract",
    "eips",
    "network",
    "node-bindings",
    "rlp",
    "hyper",
    "rand",
    "rpc-client",
    "rpc-types",
    "rpc-types-beacon",
    "rpc-types-engine",
    "rpc-types-eth",
    "rpc-types-trace",
    "signer-local",
    "sol-types",
    "signers",
    "transport-http",
] }
alloy-rpc-types-engine = { version = "1", workspace = true, features = ["jwt", "serde"] }
alloy-transport-http = { version = "1", default-features = false }


alloy-trie = "0.9"
# sp1
sp1-build = "5.0.5"
sp1-sdk = "5.0.5"
sp1-verifier = "5.0.5"
sp1-zkvm = "5.0.5"

aes = "0.8"
ahash = "0.8.11"
arbitrary = { version = "1", features = ["derive"] }
async-trait = "0.1.88"
base64 = "0.22.1"
bimap = { version = "0.6.3", features = ["serde"] }
blst = "0.3.15"
bytes = "1.10.1"
cipher = "0.4"
clap = { version = "4.5.23", features = ["derive", "env"] }
ctr = "0.9.2"
derive_more = "2"
eth_trie = "0.6.0"
ethereum_hashing = "0.7.0"
ethereum_serde_utils = "0.8"
ethereum_ssz = "0.9"
ethereum_ssz_derive = "0.9"
eyre = { version = "0.6.12" }
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hex-literal = "1.0.0"
http-body-util = "0.1.2"
jsonwebtoken = { version = "9.3.1", default-features = false }
k256 = "0.13.4"
lazy_static = "1.5.0"
lru = "0.13.0"
mockall = "0.13.1"
parking_lot = "0.12.3"
pbkdf2 = "0.12.2"
priority-queue = "2.1.1"
prometheus = "0.14.0"
prost = "0.13.4"
rand = { version = "0.9.2", features = ["os_rng"] }
reqwest = { version = "0.12.22", features = ["stream"] }
rustls = "0.23.23"
scc = "2.2.6"
secp256k1 = { version = "0.30.0", features = ["global-context"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_repr = "0.1.20"
serde_yaml = "0.9.33"
sha2 = "0.10"
sqlx = { default-features = true, version = "*", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "bigdecimal",
    "migrate"
] }
ssz_rs = { git = "https://github.com/lu-bann/ssz-rs", rev = "b8c202e13bf117a895f949015e7215e20ad8f88b" }
ssz_types = "0.11"
thiserror = "2.0.12"
tempfile = "3.20.0"
time = { version = "0.3.37", features = ["macros", "formatting", "parsing"] }
tiny-bip39 = "2.0.0"
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
toml = "0.8.13"
tonic = { version = "0.12.3", features = ["channel", "prost", "tls"] }
tonic-build = "0.12.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-core = "0.1.33"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree_hash = "0.10"
tree_hash_derive = "0.10"
unicode-normalization = "0.1.24"
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
zeroize = "1.8.1"
