[package]
edition = { workspace = true }
name = "taiyi-e2e-tests"
version = { workspace = true }

[features]
fraud-test = []
generate-proof = []

[build-dependencies]
sp1-build = { workspace = true }

[dev-dependencies]
alloy-consensus = { workspace = true }
alloy-contract = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-beacon = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp1-sdk = { workspace = true }
taiyi-cmd = { workspace = true }
taiyi-contracts = { workspace = true }
taiyi-primitives = { workspace = true }
taiyi-underwriter = { workspace = true }
taiyi-zkvm-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tree_hash = { workspace = true }
uuid = { workspace = true }
