[package]
edition = { workspace = true }
name = "taiyi-e2e-tests"
version = { workspace = true }

[features]
fraud-test = []
generate-proof = []

[build-dependencies]
sp1-build = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sp1-sdk = { workspace = true }
taiyi-cmd = { workspace = true }
taiyi-primitives = { workspace = true }
taiyi-underwriter = { workspace = true }
taiyi-zkvm-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tree_hash = { workspace = true }
uuid = { workspace = true }
