[package]
name = "taiyi-examples"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-consensus = { workspace = true }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true }
reth-primitives = { workspace = true }
serde_json = { workspace = true }
taiyi-primitives = { workspace = true }
tokio = { workspace = true }

[lib]

[[example]]
name = "submit-preconf-request"
path = "src/submit-preconf-request.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["alloy-provider", "alloy-signer", "alloy-signer-local", "eyre", "taiyi-primitives", "reqwest", "reth-primitives", "secp256k1", "serde", "serde_json", "tokio"]
