[package]
name = "taiyi-examples"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer-local = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
taiyi-primitives = { workspace = true }
tokio = { workspace = true }

[lib]

[[example]]
name = "submit-preconf-request"
path = "src/submit-preconf-request.rs"
