[package]
name = "helder-preconf-spammer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
taiyi-primitives = { workspace = true }
# time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.2"
