[package]
name = "taiyi-beacon-client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
blst = { workspace = true }
const-hex = "1.13.2"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
