[package]
edition = { workspace = true }
name = "taiyi-beacon-client"
version = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
blst = { workspace = true }
const-hex = "1.13.2"
hex = { workspace = true }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
