[package]
edition = { workspace = true }
name = "taiyi-beacon-client"
version = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
blst = { workspace = true }
const-hex = "1.15.0"
hex = { workspace = true }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
