[package]
name = "taiyi-cmd"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-contract = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
blst = { workspace = true }
cb-common = { workspace = true }

clap = { workspace = true }
ethereum-consensus = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
lighthouse_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", tag = "v7.0.0-beta.5" }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
taiyi-contracts = { workspace = true }
taiyi-crypto = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
