[package]
name = "taiyi-cmd"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-contract = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-beacon = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
eth2_keystore = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ssz_rs = { workspace = true }
taiyi-contracts = { workspace = true }
taiyi-crypto = { workspace = true }
taiyi-underwriter = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
