[package]
name = "taiyi-cmd"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
clap = { workspace = true }
eth2_keystore = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ssz_rs = { workspace = true }
taiyi-contracts = { workspace = true }
taiyi-crypto = { workspace = true }
taiyi-underwriter = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
bls = { workspace = true }
blst = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }