[package]
name = "taiyi-common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
blst = { workspace = true }
cb-common = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
ethereum-consensus = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
lighthouse_eth2_keystore = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
tracing = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
