[package]
edition = { workspace = true }
name = "cb-common"
publish = false
version = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-rpc-types-beacon = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
blst = { workspace = true }
cipher = { workspace = true }
derive_more = { workspace = true }
eth2_keystore = { workspace = true }
ethereum_serde_utils = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ssz_rs = { workspace = true }
ssz_types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
taiyi-primitives = { workspace = true }
