[package]
name = "taiyi-crypto"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
blst = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true }
taiyi-contracts = { workspace = true }
thiserror = { workspace = true }
