[package]
name = "taiyi-poi"
version = "1.1.0"
edition = "2021"

[dependencies]
taiyi-zkvm-types = { workspace = true }

alloy = { version = "1", default-features = false, features = [
    "consensus",
    "eips",
    "rlp",
    "sol-types",
]}
alloy-trie = { workspace = true }
eth_trie = { workspace = true }
serde_json = { workspace = true }
sp1-zkvm = { workspace = true }
