[package]
name = "taiyi-preconfer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-contract = { workspace = true }
alloy-eips = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-genesis = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-beacon = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }

reth-evm = { workspace = true }
reth-revm = { workspace = true }
reth-db = { workspace = true }
reth-chainspec = { workspace = true }
reth-primitives = { workspace = true }
reth-provider = { workspace = true }
reth-payload-builder = { workspace = true }
reth-node-types = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-transaction-pool = { workspace = true }

axum = { workspace = true }
beacon-api-client = { workspace = true }
blst = { workspace = true }
ethereum-consensus = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
mev-share-sse = { git = "https://github.com/paradigmxyz/mev-share-rs", rev = "a75c5959e98a79031a89f8893c97528e8f726826" }
parking_lot = { workspace = true }
priority-queue = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
taiyi-primitives = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
flume = "0.11.1"
tokio-util = { workspace = true }

[dev-dependencies]
alloy-node-bindings = { workspace = true }
mockito = "1.4.0"

[lib]
