[package]
edition = { workspace = true }
name = "taiyi-primitives"
version = { workspace = true }

[dependencies]
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-rpc-types-beacon = { workspace = true }
blst = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
ssz_rs = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
