[package]
edition = { workspace = true }
name = "taiyi-primitives"
version = { workspace = true }

[dependencies]
alloy = { version = "1", default-features = false, features = [
    "consensus",
    "eips",
    "signers",
    "sol-types",
    "rpc-types-beacon",
]}
eyre = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
ssz_rs = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
